[project]
name = "CxKitty"
version = "0.4.5"
description = "超星学习通答题姬. 媒体播放、章节测验、课程考试, 集成式自动化工具"
authors = [{ name = "SocialSisterYi", email = "1440239038@qq.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.1,<3",
    "qrcode>=7.3.1,<8",
    "rich>=12.6.0,<13",
    "pycryptodome>=3.15.0,<4",
    "lxml>=4.9.1,<5",
    "pyyaml>=6.0,<7",
    "jsonpath-python>=1.0.6,<2",
    "beautifulsoup4>=4.11.1,<5",
    "ddddocr>=1.4.10,<2",
    "numpy>=1.24.3,<2",
    "opencv-python>=4.7.0.72,<5",
    "dataclasses-json>=0.5.7,<0.6",
    "yarl>=1.9.2,<2",
    "openai>=1.66.0,<2",
    "anthropic>=0.42.0,<1",
]

[project.urls]
Repository = "https://github.com/SocialSisterYi/CxKitty"

[dependency-groups]
dev = [
    "black>=22.12.0,<23",
    "isort>=5.12.0,<6",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
